--- a/Test.html
+++ b/Test.html
@@ -1,3 +1,13 @@
-<h1>this is a test</h1>
-<p>this is a paragraph</p>
-<a href="https://en.wikipedia.org/wiki/Orangutan" target="_blank" title="learn about orangutans">Click here if you like orangutans 🦧</a>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Home Page</title>
+</head>
+<body>
+	<h1>this is a test</h1>
+	<p>this is a <i>paragraph</i></p>
+	<a href="https://en.wikipedia.org/wiki/Orangutan" target="_blank" title="learn about orangutans">Click here if you like orangutans 🦧</a>
+	<br><br><br>
+	<img src="IMG/Orangutan.png">
+</body>
+<html>
