--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Garfield</title>
 	<link rel=icon href="IMG/Garfield-FAV.jpg">
+	<link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Luckiest+Guy&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/hero.css">
 </head>
 <body>
 	<!-- Header Element -->
 	<header>
-		<img src="IMG/Garfield-avatar.jpeg">
+		<img src="IMG/Garfield Profile.jpeg">
 		<h1>Garfield</h1>
 	</header>
 
@@ -17,13 +19,13 @@
 	<main>
 		<h2>About Garfield</h2>
 		<p>
-			Garfield is ginger cat and a lover of lasagna and naps. <br>
-			A cynical and lazy feline, who's days are filled with dreaming of delicious food and outsmarting his owner Jon, he also has a mischievous side, often causing trouble for Jon's dog Odie. <br>
+			Garfield is ginger cat who doesn't like Mondays but he loves lasagna and naps. <br>
+			He's a cynical and lazy feline, who's days are filled with dreaming of delicious food and outsmarting his owner Jon, he also has a mischievous side, often causing trouble for Jon's dog Odie. <br>
 			Despite his grumpy exterior, Garfield's antics and loveable quirks have made him a favorite comic strip character for generations.<br>
 		</p>
 		<br>
 		<img src="img/Garfield Hat.jpeg">
-		<p>Garfield looking dapper in a top hat</p>
+		<p class="caption">Garfield looking dapper in a top hat</p>
 		<hr>
 
 		<!-- Characteristics -->
@@ -36,7 +38,8 @@
 
 		<!-- FRIENDS -->
 		<h2>Friends</h2>
-		<p>Garfield isn't the most social creature but he has a few complex friendships. Click the links below to find out more.
+		<p>Garfield isn't the most social creature but he has a few complex friendships. <br>
+			Click the links below to find out more.
 		</p>
 		<ul>
 			<li><a target="_blank" href="https://garfield.fandom.com/wiki/Odie"> Odie:</a>  Jon's goofy dog is Garfield's constant companion. While they often prank each other, they share a weird codependent bond. Odie might be considered Garfield's begrudging best friend.</li>
@@ -44,7 +47,7 @@
 			<li><a target="_blank" href="https://garfield.fandom.com/wiki/Penelope_Pussycat">Penelope Pussycat:</a>  This beautiful orange cat lives at an Italian restaurant and is Garfield's love interest. Their relationship is more flirtatious than truly friendly, but Garfield does show a softer side around her.</li>
 			<li><a target="_blank" href="https://garfield.fandom.com/wiki/Jon_Arbuckle">Jon:</a>  Garfield's long-suffering owner, is a clumsy cartoonist with a love life that constantly leaves him frustrated.</li>		
 		</ul>
-<hr>
+
 	</main>
 	<!-- FOOTER -->
 	<footer>
